Attempt to fix layout problem

--- a/bread-buddy/content/style.css
+++ b/bread-buddy/content/style.css
@@ -1,33 +1,42 @@
 body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0px;
+}
+
+#content {
+    display: block;
+    margin: 0 auto;
+    width: 350px;
 }
 
 h1 {
     font-size: 14pt;
 }
 
-#content {
-    margin: auto;
-    width: 350px;
-}
-
 .input-row {
     height: 40px;
-    width: 100%;
     margin-bottom: 8px;
     white-space: nowrap;
+    display: flex;
 }
 
 .input-row .label-icon {
     height: 40px;
     width: 40px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    -webkit-flex-grow: 0;
+    -webkit-flex-shrink: 0;
     background-size: contain;
-    display: inline-block;
-    vertical-align: middle;    
+    vertical-align: center;    
 }
 
 .input-row .input-value {
-    display: inline-block;
+    padding-left: 2px;
+    margin: auto auto;
+    height: 60%;
+    flex: 1;
+    -webkit-flex: 1;
 }
 
 .input-row .input-value input {
@@ -45,13 +54,16 @@ h1 {
     background-image: url("starter.png");
 }
 
-/* special case */
-#starter-hydration {
-    display: inline-block;
+#starter .label-icon:nth-of-type(2) {
+    background-image: url("starter_hydration.png");
 }
 
-#starter-hydration .label-icon {
-    background-image: url("starter_hydration.png");
+#starter .input-value:nth-of-type(2) {
+    flex-grow: 0;
+    flex-basis: 50px;
+    -webkit-flex-grow: 0;
+    -webkit-flex-basis: 50px;
+    min-width: 50px;
 }
 
 #hydration .label-icon {
